--- a/black-wires.html
+++ b/black-wires.html
@@ -8,6 +8,10 @@
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/black-wires.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Black Wires for Industrial-Grade Durability | Group Nirmal">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Choose black wires from Group Nirmal for long-lasting strength, conductivity, and protection in construction, infrastructure, and electrical systems.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -105,7 +109,7 @@
     <section class="banner">
         <img src="assets/images/product-internal/Mild steel wire-banner.jpg" alt="banner">
         <div class="banner-content">
-            <h1 data-aos="fade-up" data-aos-duration="1000">BLACK WIRES</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1000">Industrial-Grade <br> Black Wires</h1>
         </div>
     </section> 
     <!-- Banner End -->
