--- a/cables.html
+++ b/cables.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cables - Nirmal</title>
+    <title>Durable Electrical Cables for All Sectors | Group Nirmal</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/cables.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Durable Electrical Cables for All Sectors | Group Nirmal">
+    <!-- Link Meta Description -->
+    <meta name="description" content="High-performance electrical cables for residential, industrial, and infrastructure-grade wiring and installations.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -105,7 +109,7 @@
     <section class="banner">
         <img src="assets/images/product-internal/LT XLPE Insulated Power Cable-banner.jpg" alt="banner">
         <div class="banner-content">
-            <h1 data-aos="fade-up" data-aos-duration="1000">CABLES</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1000">Multi-Purpose <br> Electrical Cables</h1>
         </div>
     </section> 
     <!-- Banner End -->
