--- a/gi-wires.html
+++ b/gi-wires.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GI Wires - Nirmal</title>
+    <title>GI Wires for Strength & Corrosion Resistance | Group Nirmal</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/gi-wires.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="GI Wires for Strength & Corrosion Resistance | Group Nirmal">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Durable GI wires for fencing, construction, and industry. Zinc-coated for rust resistance and high tensile strength.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -105,7 +109,7 @@
     <section class="banner">
         <img src="assets/images/product-internal/gi-wire-banner.jpg" alt="banner">
         <div class="banner-content">
-            <h1 data-aos="fade-up" data-aos-duration="1000">GI WIRES</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1000">High-Strength <br> GI Wires</h1>
         </div>
     </section> 
     <!-- Banner End -->
