--- a/rolled-products.html
+++ b/rolled-products.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rolled Products - Nirmal</title>
+    <title>Rolled Metal Products for Industrial Use | Group Nirmal</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/rolled-products.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Rolled Metal Products for Industrial Use | Group Nirmal">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Discover rolled sheets, strips, and coils for automotive, construction, and appliance industries.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -105,7 +109,7 @@
     <section class="banner">
         <img src="assets/images/product-internal/Fish-Plate-Bars-banner.jpg" alt="banner">
         <div class="banner-content">
-            <h1 data-aos="fade-up" data-aos-duration="1000">ROLLED PRODUCTS</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1000">Precision Rolled <br> Metal Products</h1>
         </div>
     </section> 
     <!-- Banner End -->
