--- a/trading.html
+++ b/trading.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Trading - Nirmal</title>
+    <title>Industrial Raw Material Trading Services | Group Nirmal</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/trading.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Industrial Raw Material Trading Services | Group Nirmal">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Group Nirmal offers sourcing and supply of quality raw materials for metals, wires, and engineering sectors.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -111,7 +115,7 @@
         <img src="assets/images/trading/trading-banner.png" alt="banner" loading="lazy" width="800" height="400">
         <div class="banner-layer"></div>
         <div class="banner-content">
-            <h1 data-aos="fade-up" data-aos-duration="1200">TRADING</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1200">STRATEGIC INDUSTRIAL TRADING SERVICES</h1>
             <p data-aos="fade" data-aos-duration="2000">At Group Nirmal, we specialize in trading high-quality products across wire and cable industries. With a deep understanding of global markets and a commitment to excellence, we ensure seamless transactions and reliable supply chains. We hope to not only ensure our continued success as leading diversified producer of Wire and Cable industries and trader of commodities, but to also make a positive impact and create long term value for all stakeholders. As we continue to responsibly source the commodities that advance everyday life, our commitment to ethics and compliance remains unwavering.</p>
         </div>
     </section> 
