--- a/welding-electrodes.html
+++ b/welding-electrodes.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welding Electrodes - Nirmal</title>
+    <title>Welding Electrodes & Filler Wires for Industry | Group Nirmal</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/welding-electrodes.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Welding Electrodes & Filler Wires for Industry | Group Nirmal">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Explore welding electrodes, filler wires, and rods suitable for structural fabrication, pipelines, and repairs.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -105,7 +109,7 @@
     <section class="banner">
         <img src="assets/images/product-internal/Nirmal-6013-banner.jpg" alt="banner">
         <div class="banner-content">
-            <h1 data-aos="fade-up" data-aos-duration="1000">WELDING ELECTRODES</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1000">Industrial <br> Welding Solutions</h1>
         </div>
     </section> 
     <!-- Banner End -->
