--- a/zinc-wire-&-products.html
+++ b/zinc-wire-&-products.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Zinc Wire & Products - Nirmal</title>
+    <title>Zinc Wires & Industrial Products for Protection | Group Nirmal</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/zinc-wire-&-products.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Zinc Wires & Industrial Products for Protection | Group Nirmal">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Reliable zinc wires and components ideal for galvanizing, anti-corrosion, and metallizing needs in heavy industry.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -105,7 +109,7 @@
     <section class="banner">
         <img src="assets/images/product-internal/Zinc Aluminium Wire-banner.jpg" alt="banner">
         <div class="banner-content">
-            <h1 data-aos="fade-up" data-aos-duration="1000">ZINC WIRE & PRODUCTS</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1000">Zinc Wire and <br> Related Products</h1>
         </div>
     </section> 
     <!-- Banner End -->
